# universal_robot_ign

./: CMakeLists.txt
include/universal_robot_ign/: ign_joint_publisher.hpp  ign_joint_subscriber.hpp  ign_wrench_publisher.hpp  ign_wrench_subscriber.hpp
launch/: ur10_ign.launch.py  ur10_move_group_server.launch.py  ur10_moveit2_demo.launch.py  ur10_robotiq140_ign.launch.py
plugins/robotiq_controller/: CMakeLists.txt
plugins/wrench_control/: CMakeLists.txt  WrenchControl.cpp  WrenchControl.h
resource/models/robotiq140/: model.sdf  robotiq140.def.xmacro
resource/models/ur10/: model.sdf  model.sdf.xmacro  ur10.def.xmacro
resource/worlds/: empty_world.sdf  test_world.sdf
resource/xmacro/: ur10_robotiq140.sdf.xmacro
src/: ign_joint_publisher.cpp  ign_joint_subscriber.cpp  ign_wrench_publisher.cpp  ign_wrench_subscriber.cpp  joint_controller_main.cpp  joint_state_publisher_main.cpp
